--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ androidx-navigation = "2.7.0"
 androidxComposeMaterial3 = "1.2.0"
 androidxComposeMaterial = "1.5.4"
 kotlinxCoroutines = "1.7.3"
+animationLint = "1.8.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -36,6 +37,7 @@ androidx-navigation-compose = { module = "androidx.navigation:navigation-compose
 androidx-material = { module = "androidx.compose.material:material", version.ref = "androidxComposeMaterial" } # Add this
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinxCoroutines" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutines" }
+androidx-animation-lint = { group = "androidx.compose.animation", name = "animation-lint", version.ref = "animationLint" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
